# HazelFollowAlong

./: CMakeLists.txt  README.md
Hazel/: CMakeLists.txt  test.h
Hazel/src/: Hazel.h  test.cpp
Hazel/src/Hazel/: Application.cpp  Application.h  Core.h  EntryPoint.h  Log.cpp  Log.h
Sandbox/: CMakeLists.txt
Sandbox/src/: SandboxApp.cpp  application.cpp
